force-app/main/default/objects/ccp2_Registered_Vehicle__c/ccp2_Registered_Vehicle__c.object-meta.xml
<CustomObject>
    <label>Registered Vehicle</label>
    <nameField>
        <displayFormat>RV-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registered Vehicles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>