force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Body_Shape__c.field-meta.xml
<CustomField>
    <fullName>Body_Shape__c</fullName>
    <label>Body Shape</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Flat Body</fullName>
            </value>
            <value>
                <fullName>Crane</fullName>
            </value>
            <value>
                <fullName>Cabover Bar</fullName>
            </value>
            <value>
                <fullName>work At Height</fullName>
            </value>
            <value>
                <fullName>Packer</fullName>
            </value>
            <value>
                <fullName>Dump</fullName>
            </value>
            <value>
                <fullName>refrigerated/Freezer</fullName>
            </value>
            <value>
                <fullName>Mixer</fullName>
            </value>
            <value>
                <fullName>Tank</fullName>
            </value>
            <value>
                <fullName>Container Only</fullName>
            </value>
            <value>
                <fullName>Aluminum Van</fullName>
            </value>
            <value>
                <fullName>Wing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>