force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Chassis_number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_number__c</fullName>
    <label>Chassis Number</label>
    <length>200</length>
    <type>Text</type>
</CustomField>