force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Displacement__c.field-meta.xml
<CustomField>
    <fullName>Displacement__c</fullName>
    <label>Displacement</label>
    <length>100</length>
    <type>Text</type>
</CustomField>