force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Door_Number__c.field-meta.xml
<CustomField>
    <fullName>Door_Number__c</fullName>
    <label>Door Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>