force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/First_Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Registration_Date__c</fullName>
    <label>First Registration Date</label>
    <type>Date</type>
</CustomField>