force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/fullModel__c.field-meta.xml
<CustomField>
    <fullName>fullModel__c</fullName>
    <label>fullModel</label>
    <length>50</length>
    <type>Text</type>
</CustomField>