force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Model_Prime_Mover__c.field-meta.xml
<CustomField>
    <fullName>Model_Prime_Mover__c</fullName>
    <label>Model Prime Mover</label>
    <length>200</length>
    <type>Text</type>
</CustomField>