force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <label>Payload</label>
    <length>255</length>
    <type>Text</type>
</CustomField>