force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Private_Business_use__c.field-meta.xml
<CustomField>
    <fullName>Private_Business_use__c</fullName>
    <label>Private/Business use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Use</fullName>
            </value>
            <value>
                <fullName>Business Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>