force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Use__c.field-meta.xml
<CustomField>
    <fullName>Use__c</fullName>
    <label>Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Special</fullName>
            </value>
            <value>
                <fullName>Freight</fullName>
            </value>
            <value>
                <fullName>Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>