force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Vehicle_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Expiration_Date__c</fullName>
    <label>Vehicle Expiration Date</label>
    <length>200</length>
    <type>Text</type>
</CustomField>