force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Vehicle_Type__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Type__c</fullName>
    <label>Vehicle Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Light Car</fullName>
            </value>
            <value>
                <fullName>Large Special</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>