force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/vehicleWeight__c.field-meta.xml
<CustomField>
    <fullName>vehicleWeight__c</fullName>
    <label>vehicleWeight</label>
    <length>200</length>
    <type>Text</type>
</CustomField>