force-app/main/default/objects/ccp2_Registered_Vehicle__c/fields/Work_Location__c.field-meta.xml
<CustomField>
    <fullName>Work_Location__c</fullName>
    <label>Work Location</label>
    <length>200</length>
    <type>Text</type>
</CustomField>