force-app/main/default/objects/ccp2_Registered_Vehicle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Vehicle_Name__c</columns>
    <columns>Chassis_number__c</columns>
    <columns>Account__c</columns>
    <columns>First_Registration_Date__c</columns>
    <columns>Vehicle_Expiration_Date__c</columns>
    <columns>vehicleWeight__c</columns>
    <columns>Body_Shape__c</columns>
    <columns>Registration_Number__c</columns>
    <columns>fullModel__c</columns>
    <columns>Vehicle_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>